@@ -1,6 +1,6 @@
 
 @node Preface
-@chapter Preface
+@unnumberedchapter Preface
 
 
 It must have been during a rehearsal of the EJE (Eindhoven Youth
